2025-02-27  Giselle Johnson <gigiischic@gmail.com>
    Updated User messages
    Updated Arrows
    Updated cave by adding new rooms

2025-02-27  James Kang <james.y.kang@uscga.edu>
    updated arrow travel distance

2025-02-27 Cassandra Moshy <cassiemoshy@gmail.com>
    Updated Arrows
    Modified Arrows

2025-02-27 Nathan Harris <nathan.p.harris@uscga.edu>
    Modified creature threats
    Added teleport