@@ -13,3 +13,6 @@
 2025-02-27 Nathan Harris <nathan.p.harris@uscga.edu>
     Modified creature threats
     Added teleport
+
+2025-03-31 Giselle Johnson <gigiischic@gmail.com>
+    Link to the SQL database download: https://sqlitebrowser.org/dl/
